2015-02-12 Konrad Bucheli <kb@open.ch>
        * Version 0.6

2015-02-12 Konrad Bucheli <kb@open.ch>
	* no data interception if only command and no data should be logged
	* do not log of input on interactive sessions
          (bug introduced in version 0.5, reported by Ruslan Popov)

2014-11-04 Konrad Bucheli <kb@open.ch>
	* Version 0.5

2014-10-03 Konrad Bucheli <kb@open.ch>
	* add configuration option LogNonInteractiveData
	* change default for configuration option LogRemoteCommandData to on

2014-05-12 Konrad Bucheli <kb@open.ch>
	* Version 0.4

2014-05-08 Konrad Bucheli <kb@open.ch>
	* (process_options) fix login shell detection

2014-05-02 Konrad Bucheli <kb@open.ch>
        * Version 0.3

2014-05-02 Konrad Bucheli <kb@open.ch>
	* (run_log_forwarder) avoid runaway processes

2014-04-08 Konrad Bucheli <kb@open.ch>
        * Version 0.2

2014-04-08 Konrad Bucheli <kb@open.ch>
	* (start_logger) set owner of new tty to user (fixes screen)

2014-03-10 Konrad Bucheli <kb@open.ch>
	* (process_options) do not print client host if SSH_CLIENT is not set

2014-03-07 Konrad Bucheli <kb@open.ch>
	* Initial version